--- a/GestaoPedidosWpf/MainWindow.xaml
+++ b/GestaoPedidosWpf/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GestaoPedidosWpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="364" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Button x:Name="btnTelaPessoas" Content="Pessoas" HorizontalAlignment="Left" Margin="55,0,0,0" VerticalAlignment="Center" Height="100" Width="150" FontSize="24" Click="btnTelaPessoas_Click"/>
+
     </Grid>
 </Window>
