feat: tela de pedidos

--- a/GestaoPedidosWpf/MainWindow.xaml
+++ b/GestaoPedidosWpf/MainWindow.xaml
@@ -21,6 +21,7 @@
             <Button Content="Dashboard" Command="{Binding NavegarDashboardCommand}" Height="40"/>
             <Button Content="Pessoas" Command="{Binding NavegarPessoasCommand}" Height="40"/>
             <Button Content="Produtos" Command="{Binding NavegarProdutosCommand}" Height="40"/>
+            <Button Content="Pedidos" Command="{Binding NavegarPedidosCommand}" Height="40"/>
         </StackPanel>
 
         <ContentControl Content="{Binding ConteudoAtual}" Grid.Column="1" />
