--- a/GestaoPedidosWpf/Views/PedidoView.xaml
+++ b/GestaoPedidosWpf/Views/PedidoView.xaml
@@ -49,7 +49,13 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Data" Binding="{Binding DataVenda, StringFormat='dd/MM/yyyy HH:mm'}" />
                 <DataGridTextColumn Header="Valor Total" Binding="{Binding ValorTotal, StringFormat=C, ConverterCulture=pt-BR}" />
-                <DataGridTextColumn Header="Forma Pagamento" Binding="{Binding FormaPagamento}" />
+                <DataGridTextColumn Header="Forma Pagamento">
+                    <DataGridTextColumn.Binding>
+                        <Binding Path="FormaPagamento"
+                             Converter="{StaticResource EnumDesc}"
+                             Mode="OneWay"/>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Status" Binding="{Binding Status}" />
                 <DataGridTextColumn Header="Pessoa" Binding="{Binding Pessoa.Nome}" />
                 <DataGridTemplateColumn Header="Ações">
