--- a/GestaoPedidosWpf/Views/PessoaCadastroView.xaml
+++ b/GestaoPedidosWpf/Views/PessoaCadastroView.xaml
@@ -3,16 +3,91 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GestaoPedidosWpf.Views"
         mc:Ignorable="d"
-        Title="PessoaCadastroView" Height="260" Width="454" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Label Content="Nome:" HorizontalAlignment="Left" Margin="84,69,0,0" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Nome}" x:Name="txtNome" HorizontalAlignment="Left" Margin="84,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"/>
-        <Label Content="CPF:" HorizontalAlignment="Left" Margin="84,118,0,0" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Cpf}" x:Name="txtCpf" HorizontalAlignment="Left" Margin="84,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"/>
-        <Label Content="Nome:" HorizontalAlignment="Left" Margin="84,69,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnSalvar" Content="Salvar" Command="{Binding SalvarCommand}" HorizontalAlignment="Left" Margin="81,175,0,0" VerticalAlignment="Top" Click="btnSalvar_Click" Width="80"/>
-        <Button x:Name="btnCancelar" Content="Cancelar" HorizontalAlignment="Left" Margin="169,175,0,0" VerticalAlignment="Top" Click="btnCancelar_Click" Width="80"/>
+        Title="Cadastro de Pessoa" Height="354" Width="466" SizeToContent="Height"
+        WindowStartupLocation="CenterScreen">
+
+    <Grid Margin="10,10,10,10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <!-- Dados Pessoais -->
+        <GroupBox Header="Dados Pessoais" Grid.Row="0" Margin="0,0,0,10">
+            <Grid Margin="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="200"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="150"/>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="Nome:" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,10,0"/>
+                <TextBox Text="{Binding Nome}" Grid.Column="1" VerticalAlignment="Center"/>
+
+                <TextBlock Text="CPF:" Grid.Column="2" VerticalAlignment="Center" Margin="20,0,10,0"/>
+                <TextBox Text="{Binding Cpf}" Grid.Column="3" VerticalAlignment="Center" Margin="0,0,60,0"/>
+            </Grid>
+        </GroupBox>
+
+        <!-- Endereço -->
+        <GroupBox Header="Endereço" Grid.Row="1" Margin="0,0,0,10">
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <!-- Rua -->
+                <TextBlock Text="Rua:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,10,5"/>
+                <TextBox Text="{Binding Endereco.Rua}" Grid.Row="0" Margin="3,0,93,44" Grid.RowSpan="2" Grid.Column="1"/>
+
+                <!-- Número e Bairro -->
+                <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,10,0,0">
+                    <StackPanel Margin="0,0,20,0">
+                        <TextBlock Text="Número:"/>
+                        <TextBox Text="{Binding Endereco.Numero}" Width="100"/>
+                    </StackPanel>
+                    <StackPanel>
+                        <TextBlock Text="Bairro:"/>
+                        <TextBox Text="{Binding Endereco.Bairro}" Width="180"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <!-- Cidade e Estado -->
+                <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,10,0,0">
+                    <StackPanel Margin="0,0,20,0">
+                        <TextBlock Text="Cidade:"/>
+                        <TextBox Text="{Binding Endereco.Cidade}" Width="180"/>
+                    </StackPanel>
+                    <StackPanel>
+                        <TextBlock Text="Estado:"/>
+                        <TextBox Text="{Binding Endereco.Estado}" Width="50"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <!-- CEP -->
+                <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,10,0,0">
+                    <StackPanel>
+                        <TextBlock Text="CEP:"/>
+                        <TextBox Text="{Binding Endereco.Cep}" Width="120"/>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </GroupBox>
+
+        <!-- Botões -->
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,1,0,0">
+            <Button x:Name="btnSalvar" Content="Salvar" Width="90" Margin="0,0,10,0" Command="{Binding SalvarCommand}" Height="25" Click="btnSalvar_Click"/>
+            <Button Content="Cancelar" Width="90" Height="25"/>
+        </StackPanel>
     </Grid>
 </Window>
