--- a/GestaoPedidosWpf/Views/ProdutoCadastroView.xaml
+++ b/GestaoPedidosWpf/Views/ProdutoCadastroView.xaml
@@ -1,21 +1,60 @@
 ﻿<Window x:Class="GestaoPedidosWpf.Views.ProdutoCadastroView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GestaoPedidosWpf.Views"
-        mc:Ignorable="d"
-        Title="ProdutoCadastroView" Height="450" Width="800" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Label Content="Nome:" HorizontalAlignment="Left" Margin="84,69,0,0" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Nome}" x:Name="txtNome" HorizontalAlignment="Left" Margin="84,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"/>
-        <Label Content="Código:" HorizontalAlignment="Left" Margin="84,118,0,0" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Codigo}" x:Name="txtCodigo" HorizontalAlignment="Left" Margin="84,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"/>
-        <Label Content="Nome:" HorizontalAlignment="Left" Margin="84,69,0,0" VerticalAlignment="Top"/>
-        <Label Content="Valor:" HorizontalAlignment="Left" Margin="84,167,0,0" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Valor}" x:Name="txtValor" HorizontalAlignment="Left" Margin="84,193,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"/>
-        <Button x:Name="btnSalvar" Content="Salvar" HorizontalAlignment="Left" Margin="84,225,0,0" VerticalAlignment="Top" Click="btnSalvar_Click" Width="80"/>
-        <Button x:Name="btnCancelar" Content="Cancelar" HorizontalAlignment="Left" Margin="169,225,0,0" VerticalAlignment="Top" Click="btnCancelar_Click" Width="80"/>
+        Title="Cadastro de Produto"
+        SizeToContent="WidthAndHeight"
+        Width="344"
+        WindowStartupLocation="CenterScreen">
 
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <GroupBox Header="Dados do Produto" Grid.Row="0" Margin="0,0,0,10">
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="60"/>
+                    <ColumnDefinition Width="10"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Row="0" Grid.ColumnSpan="3" Orientation="Horizontal">
+                    <StackPanel>
+                        <TextBlock Text="Id:" Margin="0,0,0,2"/>
+                        <TextBox Text="{Binding Id}" Width="50
+                                 " IsReadOnly="True" Background="#EEE"/>
+                    </StackPanel>
+
+                    <StackPanel Margin="15,0,0,0">
+                        <TextBlock Text="Nome:" Margin="0,0,0,2"/>
+                        <TextBox Text="{Binding Nome}" Width="221"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <StackPanel Grid.Row="1" Grid.ColumnSpan="3" Orientation="Horizontal" Margin="0,10,0,0">
+                    <StackPanel Margin="0,0,15,0">
+                        <TextBlock Text="Código:" Margin="0,0,0,2"/>
+                        <TextBox Text="{Binding Codigo}" Width="150"/>
+                    </StackPanel>
+
+                    <StackPanel>
+                        <TextBlock Text="Valor Unit.:" Margin="0,0,0,2"/>
+                        <TextBox Text="{Binding ValorUnitario, StringFormat=C, ConverterCulture=pt-BR}" Width="120"/>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </GroupBox>
+
+        <!-- Botões -->
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button x:Name="btnSalvar" Content="Salvar" Command="{Binding SalvarCommand}" Width="90" Margin="0,0,10,0" Click="btnSalvar_Click" />
+            <Button x:Name="btnCancelar" Content="Cancelar" Command="{Binding CancelarCommand}" Width="90" Click="btnCancelar_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
