refac: tela de visualização pedidos

--- a/GestaoPedidosWpf/Views/PedidoView.xaml
+++ b/GestaoPedidosWpf/Views/PedidoView.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl x:Class="GestaoPedidosWpf.Views.PedidoView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:GestaoPedidosWpf.Views"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:models="clr-namespace:GestaoPedidosWpf.Models"
-             mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
 
     <UserControl.Resources>
         <x:Array x:Key="PedidosExemplo" Type="{x:Type models:Pedido}">
@@ -18,7 +18,6 @@
                     <models:Pessoa Nome="João Silva" />
                 </models:Pedido.Pessoa>
             </models:Pedido>
-
             <models:Pedido DataVenda="2025-07-20T10:00:00"
                            ValorTotal="89.90"
                            FormaPagamento="Boleto"
@@ -30,47 +29,132 @@
         </x:Array>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <!-- Filtros -->
+            <RowDefinition Height="*"/>
+            <!-- Tabela -->
+            <RowDefinition Height="Auto"/>
+            <!-- Botão -->
+        </Grid.RowDefinitions>
 
-        <ComboBox
-            ItemsSource="{Binding Pessoas}"
-            SelectedItem="{Binding PessoaSelecionada, Mode=TwoWay}"
-            HorizontalAlignment="Center" Margin="0,10,0,0"
-            VerticalAlignment="Top" Width="250" Height="30" />
+        <!-- FILTROS -->
+        <Grid Grid.Row="0" Margin="0,0,0,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
 
-        <DataGrid
-            ItemsSource="{Binding Pedidos}"
-            d:ItemsSource="{StaticResource PedidosExemplo}"
-            AutoGenerateColumns="False"
-            CanUserAddRows="False"
-            IsReadOnly="True"
-            Margin="0,93,0,57">
+            <!-- Primeira linha -->
+            <Grid Grid.Row="0" Margin="0,0,0,5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="100"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" Margin="0,0,10,0">
+                    <TextBlock Text="Pessoa:" Margin="0,0,0,2"/>
+                    <ComboBox ItemsSource="{Binding Pessoas}" SelectedItem="{Binding PessoaSelecionada}" Height="25"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" Margin="0,0,10,0">
+                    <TextBlock Text="Valor Mínimo:" Margin="0,0,0,2"/>
+                    <TextBox Text="{Binding ValorMinimo, UpdateSourceTrigger=PropertyChanged}" Height="25" FontSize="16"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="2" Margin="0,0,10,0">
+                    <TextBlock Text="Valor Máximo:" Margin="0,0,0,2"/>
+                    <TextBox Text="{Binding ValorMaximo, UpdateSourceTrigger=PropertyChanged}" Height="25" FontSize="16"/>
+                </StackPanel>
+            </Grid>
+
+            <!-- Segunda linha -->
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" Margin="0,0,10,0">
+                    <TextBlock Text="Data Inicial:" Margin="0,0,0,2"/>
+                    <DatePicker SelectedDate="{Binding DataInicial}" Height="25"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" Margin="0,0,10,0">
+                    <TextBlock Text="Data Final:" Margin="0,0,0,2"/>
+                    <DatePicker SelectedDate="{Binding DataFinal}" Height="25" Language="pt-BR"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="2" Margin="0,0,10,0">
+                    <TextBlock Text="Forma de Pagamento:" Margin="0,0,0,2"/>
+                    <ComboBox ItemsSource="{Binding FormasPagamento}"
+                        SelectedItem="{Binding PgtoSelecionado}"
+                        Height="25">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Converter={StaticResource EnumDesc}}"/>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </StackPanel>
+
+                <StackPanel Grid.Column="3" Margin="0,0,10,0">
+                    <TextBlock Text="Status:" Margin="0,0,0,2"/>
+                    <ComboBox ItemsSource="{Binding StatusPedidos}" SelectedItem="{Binding StatusSelecionado}" Height="25"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="4" VerticalAlignment="Bottom">
+                    <Button Content="Limpar" Command="{Binding LimparFiltrosCommand}" Width="100" Height="25" Margin="10,0,0,0"/>
+                </StackPanel>
+            </Grid>
+        </Grid>
+
+        <!-- TABELA -->
+        <DataGrid Grid.Row="1"
+                  ItemsSource="{Binding Pedidos}"
+                  d:ItemsSource="{StaticResource PedidosExemplo}"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  IsReadOnly="True"
+                  Margin="0,0,0,10">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Data" Binding="{Binding DataVenda, StringFormat='dd/MM/yyyy HH:mm'}" />
-                <DataGridTextColumn Header="Valor Total" Binding="{Binding ValorTotal, StringFormat=C, ConverterCulture=pt-BR}" />
-                <DataGridTextColumn Header="Forma Pagamento">
+                <DataGridTextColumn Header="Data" Binding="{Binding DataVenda, StringFormat='dd/MM/yyyy HH:mm'}" Width="100"/>
+                <DataGridTextColumn Header="Valor Total" Binding="{Binding ValorTotal, StringFormat=C, ConverterCulture=pt-BR}" Width="90"/>
+                <DataGridTextColumn Header="Forma Pagamento" Width="60">
                     <DataGridTextColumn.Binding>
                         <Binding Path="FormaPagamento"
-                             Converter="{StaticResource EnumDesc}"
-                             Mode="OneWay"/>
+                                 Converter="{StaticResource EnumDesc}"
+                                 Mode="OneWay"/>
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Status" Binding="{Binding Status}" />
-                <DataGridTextColumn Header="Pessoa" Binding="{Binding Pessoa.Nome}" />
-                <DataGridTemplateColumn Header="Ações">
+                <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="70"/>
+                <DataGridTextColumn Header="Pessoa" Binding="{Binding Pessoa.Nome}" Width="*"/>
+                <DataGridTemplateColumn Header="Ações" Width="200">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
-                                <Button Content="Pago" Command="{Binding DataContext.MarcarComoPagoCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" />
-                                <Button Content="Enviado" Command="{Binding DataContext.MarcarComoEnviadoCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" />
-                                <Button Content="Recebido" Command="{Binding DataContext.MarcarComoRecebidoCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding}" />
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <Button Content="Pago" Command="{Binding DataContext.MarcarComoPagoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding}" Margin="2,0"/>
+                                <Button Content="Enviado" Command="{Binding DataContext.MarcarComoEnviadoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding}" Margin="2,0"/>
+                                <Button Content="Recebido" Command="{Binding DataContext.MarcarComoRecebidoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" CommandParameter="{Binding}" Margin="2,0"/>
                             </StackPanel>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Novo Pedido" Command="{Binding NovoPedidoCommand}" HorizontalAlignment="Left" Margin="598,40,0,0" VerticalAlignment="Top"/>
+
+        <!-- BOTÃO -->
+        <Grid Grid.Row="2">
+            <Button Content="Novo Pedido"
+                    Command="{Binding NovoPedidoCommand}"
+                    Width="120" Height="30"
+                    HorizontalAlignment="Left"/>
+        </Grid>
     </Grid>
 </UserControl>
