--- a/GestaoPedidosWpf/Views/PedidoView.xaml
+++ b/GestaoPedidosWpf/Views/PedidoView.xaml
@@ -56,7 +56,7 @@
 
                 <StackPanel Grid.Column="0" Margin="0,0,10,0">
                     <TextBlock Text="Pessoa:" Margin="0,0,0,2"/>
-                    <ComboBox ItemsSource="{Binding Pessoas}" SelectedItem="{Binding PessoaSelecionada}" Height="25"/>
+                    <ComboBox ItemsSource="{Binding Pessoas}" SelectedItem="{Binding PessoaSelecionada, Mode=TwoWay}" Height="25"/>
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Margin="0,0,10,0">
